tdf#98380 - opengl - get font anti-aliasing right.

Change-Id: I087c4939c19bc5966da45cb848d71e95ac982e33