vcl/win/source/gdi/salgdi3.cxx
@@ -40,6 +40,7 @@
 #include <vcl/settings.hxx>
 #include <vcl/sysdata.hxx>
 #include <vcl/metric.hxx>
+#include <vcl/opengl/OpenGLWrapper.hxx>
 
 #include "fontsubset.hxx"
 #include "outdev.h"
@@ -1393,6 +1394,15 @@ void ImplGetLogFontFromFontSelect( HDC hDC,
         rLogFont.lfPitchAndFamily = pWinFontData->GetPitchAndFamily();
     }
 
+    static BYTE nDefaultQuality = NONANTIALIASED_QUALITY;
+    if (nDefaultQuality == NONANTIALIASED_QUALITY)
+    {
+        if (OpenGLWrapper::isVCLOpenGLEnabled())
+            nDefaultQuality = ANTIALIASED_QUALITY;
+        else
+            nDefaultQuality = DEFAULT_QUALITY;
+    }
+
     rLogFont.lfWeight          = ImplWeightToWin( pFont->GetWeight() );
     rLogFont.lfHeight          = (LONG)-pFont->mnHeight;
     rLogFont.lfWidth           = (LONG)pFont->mnWidth;
@@ -1402,7 +1412,7 @@ void ImplGetLogFontFromFontSelect( HDC hDC,
     rLogFont.lfEscapement      = pFont->mnOrientation;
     rLogFont.lfOrientation     = rLogFont.lfEscapement;
     rLogFont.lfClipPrecision   = CLIP_DEFAULT_PRECIS;
-    rLogFont.lfQuality         = DEFAULT_QUALITY;
+    rLogFont.lfQuality         = nDefaultQuality;
     rLogFont.lfOutPrecision    = OUT_TT_PRECIS;
     if ( pFont->mnOrientation )
         rLogFont.lfClipPrecision |= CLIP_LH_ANGLES;
